--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -36423,7 +36423,16 @@ ul.grid-2 li {
 
 .scroltop {
   background: var(--bs-secondary);
-  bottom: 30px;
+  bottom: 70px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   color: #fff !important;
   cursor: pointer;
   opacity: 0;
