--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ html[data-theme-color=skin-2] {
   --bs-body-color: #566593;
   --bs-heading-color: #5f724f;
   --bs-heading-color-rgb: 95, 114, 79;
-  --bs-primary: #ccab6c;
+  --bs-primary: #eac04f;
   --bs-secondary: #5f724f;
   --bs-light: #FFF5F9;
   --bs-primary-rgb: 204, 171, 108;
