--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -113,23 +113,23 @@ html[data-theme-color=skin-2] {
   --bs-body-color: #566593;
   --bs-heading-color: #5f724f;
   --bs-heading-color-rgb: 95, 114, 79;
-  --bs-primary: #ccab6c;
+  --bs-primary: #eac04f;
   --bs-secondary: #5f724f;
   --bs-light: #FFF5F9;
-  --bs-primary-rgb: 204, 171, 108;
+  --bs-primary-rgb: 234, 192, 79;
   --bs-secondary-rgb: 95, 114, 79;
   --bs-light-rgb: 255, 245, 249;
-  --bs-primary-text-emphasis: #52442b;
+  --bs-primary-text-emphasis: #5e4d20;
   --bs-secondary-text-emphasis: #262e20;
   --bs-light-text-emphasis: #666264;
-  --bs-primary-bg-subtle: #f5eee2;
-  --bs-secondary-bg-subtle: #f5eee2;
+  --bs-primary-bg-subtle: #fbf2dc;
+  --bs-secondary-bg-subtle: #fbf2dc;
   --bs-light-bg-subtle: #fffdfe;
-  --bs-primary-border-subtle: #f5eee2;
+  --bs-primary-border-subtle: #fbf2dc;
   --bs-secondary-border-subtle: #dfe3dc;
   --bs-light-border-subtle: #fffdfe;
-  --bs-primary-btn-hover-bg: #ad915c;
-  --bs-primary-btn-hover-border-color: #ad915c;
+  --bs-primary-btn-hover-bg: #c7a343;
+  --bs-primary-btn-hover-border-color: #c7a343;
   --bs-secondary-btn-hover-bg: #516143;
   --bs-secondary-btn-hover-border-color: #516143;
   --bs-light-btn-hover-bg: #d9d0d4;
