--- a/assets/scss/components/_main-slider.scss
+++ b/assets/scss/components/_main-slider.scss
@@ -238,7 +238,7 @@
 		background-size: cover;
 		background-position: center;
 		overflow: hidden;
-		background: linear-gradient(to right, rgba(255, 243, 248, 1) 0%, rgba(255, 243, 248, 0) 50%, rgba(255, 243, 248, 1) 100%);
+		background: #f6f4e5;
 	    z-index: 1;
 		
 		& > *{
