--- a/assets/scss/theme-color/_skin-2.scss
+++ b/assets/scss/theme-color/_skin-2.scss
@@ -1,7 +1,7 @@
 html[data-theme-color="skin-2"]{
-	$primary: #eac04f;
+	$primary: #c8a867;
 	$secondary: #5f724f;
-	$light: #FFF5F9;
+	$light: #f6f4e5;
 	
 	$primary-text-emphasis:   shade-color($primary, 60%) !default;
 	$secondary-text-emphasis: shade-color($secondary, 60%) !default;
